test/corpus/variable.txt
==================
Variable assignment
==================

@{var} =  file
@{var2} = @{var}
@{var3} = @{var} @{var2} /usr/lib
@{new_var} = @{var}/file

---

(profile_file
  (preamble
    (variable_assignment
      left: (variable
        name: (identifier))
      right: (identifier))
    (variable_assignment
      left: (variable
        name: (identifier))
      right: (variable
        name: (identifier)))
    (variable_assignment
      left: (variable
        name: (identifier))
      right: (variable
        name: (identifier))
      right: (variable
        name: (identifier))
      right: (identifier))
    (variable_assignment
      left: (variable
        name: (identifier))
      right: (fileglob
        (variable
          name: (identifier))
        (identifier)))))
